cleanup(OEBS-2158): solve sonar issues (#37)